--- a/src/app.css
+++ b/src/app.css
@@ -31,7 +31,7 @@
 }
 
 .input-text::placeholder {
-  color: #000;
+  color: rgb(185, 185, 185);
 }
 
 .input-submit {
@@ -49,4 +49,3 @@
   outline: none;
   border: none;
 }
-  
